--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
     <title>React App</title>
   </head>
   <body>
-    <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="src/index.jsx"></script>
     <div id="root"></div>
 
   </body>
