--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -14,12 +15,13 @@
       rel="stylesheet" 
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
       crossorigin="anonymous" />
-
+  -->
+      
     <title>React App</title>
   </head>
   <body>
-    <script type="module" src="/src/index.jsx"></script>
     <div id="root"></div>
-
+    <script type="module" src="/src/index.jsx"></script>
+    
   </body>
 </html>
